Fix bug with hover on mobile nav button not transitioning

--- a/src/App.css
+++ b/src/App.css
@@ -404,45 +404,37 @@ button ion-icon {
 }
 
 .mobile-navigation-button {
+  align-items: center;
   background-color: var(--blueish);
   border: none;
   border-radius: 999px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px;
   color: var(--bluer);
   cursor: pointer;
+  display: flex;
   height: 100%;
+  justify-content: center;
   padding: 15px;
   text-decoration: none;
+  transition: all 0.5s ease 0s;
   width: 100%;
 }
 
 .mobile-navigation-button:hover {
   background-color: var(--blue);
   color: var(--white);
-}
-
-.mobile-navigation-button ion-icon {
-  font-size: larger;
+  transition: all 0.5s ease 0s;
 }
 
 a.mobile-navigation-button {
-  align-items: center;
   background-color: var(--blue);
   color: var(--white);
-  display: flex;
   gap: 10px;
-  justify-content: center;
 }
 
 a.mobile-navigation-button:hover {
   background-color: var(--bluer);
   color: var(--white);
-}
-
-button.mobile-navigation-button {
-  align-items: center;
-  display: flex;
-  justify-content: center;
 }
 
 @media only screen and (min-width: 525px) {
